--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,24 @@
-NODE_ENV=production
+NODE_ENV=development
 PORT=5000
 MONGO_URI=your_mongodb_uri
 JWT_SECRET=your_jwt_secret
-GOOGLE_CLIENT_ID=your_google_client_id
-GOOGLE_CLIENT_SECRET=your_google_client_secret
+SESSION_SECRET=your_session_secret
+
+# Pinata Configuration
 PINATA_API_KEY=your_pinata_api_key
-PINATA_SECRET_KEY=your_pinata_secret_key
+PINATA_SECRET_API_KEY=your_pinata_secret_key
 PINATA_JWT=your_pinata_jwt
+
+# Blockchain Configuration
 CONTRACT_ADDRESS=your_contract_address
 ETHEREUM_RPC_URL=your_ethereum_rpc_url
-PRIVATE_KEY=your_private_key 
+PRIVATE_KEY=your_private_key
+
+# Email Configuration
+EMAIL_USER=your_email
+EMAIL_PASS=your_email_app_password
+EMAIL_PASSWORD=your_email_password
+
+# Google OAuth
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret 
