--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
+    "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
@@ -22,17 +23,17 @@
     "ethers": "^6.13.5",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^7.1.5",
     "express-session": "^1.18.1",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
-    "react-bootstrap": "^2.10.9",
-    "helmet": "^7.1.0",
-    "express-rate-limit": "^7.1.5",
-    "express-mongo-sanitize": "^2.2.0"
+    "react-bootstrap": "^2.10.9"
   },
   "devDependencies": {
     "concurrently": "^8.0.1",
