--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "nodemailer": "^6.10.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
-    "react-bootstrap": "^2.10.9"
+    "react-bootstrap": "^2.10.9",
+    "ua-parser-js": "^2.0.2"
   },
   "devDependencies": {
     "concurrently": "^8.0.1",
