--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "passport-google-oauth20": "^2.0.0",
     "react-bootstrap": "^2.10.9",
     "streamifier": "^0.1.1",
-    "ua-parser-js": "^2.0.2"
+    "ua-parser-js": "^2.0.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "concurrently": "^8.0.1",
